    - All functions now compatible with API v2.x
    - GetPage now has date search options
    - Fixed minor bugs in multiple functions (see github commits)
2015-04-15 - version 0.5.1:
    - Fixed bugs in getInsights
2015-08-03 - version 0.5.2:
    - Added searchGroup and getGroup functions
    - minor fixes to comply with new CRAN rules
    - fixes bug in fbOAuth
2015-08-04 - version 0.6
    - new CRAN release
2015-08-15 - version 0.6.1
    - fixes bug in getPage when n < available posts
2016-02-21 - version 0.6.2
    - getInsights now works with multiple metrics
    - added legacy scope to authentication
2016-03-03 - version 0.6.3
    - fixes amount of data issue in getPage
2016-04-15 - version 0.6.4
    - new fix for amount of data issue in getPage
2016-07-02 - version 0.6.5
    - now works with httr 1.2
2016-07-11 - version 0.6.6
    - added getReactions to scrape reaction data for posts
    - getPage has reactions option to scrape reaction data
    - getShares returns list of shared posts for a given post
    - other minor fixes
2016-07-12 - version 0.6.7
    - added getCommentReplies function to scrape nested comments
2016-07-26 - version 0.6.8
    - getGroup function now has feed option to return only admin posts
2016-08-16 - version 0.6.9
    - added story field to getPage
2016-10-23 - version 0.6.10
    - fixed bug in getPage with reactions=T in posts with no reactions
2016-12-28 - version 0.6.11
    - added verbose option to getPage
2017-01-21 - version 0.6.12
    - added support for reactions in getPost
    - added support for multiple API versions in callAPI
2017-02-17 - version 0.6.13
    - fixes in getInsights
2017-04-21 - version 0.6.14
    - fixes in fbOAuth
2017-05-24 - version 0.6.15
    - adds getEvents
    - updates in searchPages
    - minor fixes
2017-06-01 - version 0.6.16
    - documentation updates
    - searchGroups now returns 25+ results
2017-07-11 - version 0.6.17
    - getUsers now works with recent versions of API