@@ -10,6 +10,7 @@ export(getFriends)
 export(getGroup)
 export(getInsights)
 export(getLikes)
+export(getMembers)
 export(getNetwork)
 export(getNewsfeed)
 export(getPage)
